microservices/blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
  labels:
    name: myingress
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: "/posts"
            backend:
              service:
                name: posts-cip-srv
                port: 
                  number: 4000
